# CPM.cu

./: .gitignore  MANIFEST.in  README.md  README_ZH.md  TODOLIST.md  check_new_branch.sh  print_env.py  pyproject.toml  pytest.ini  setup.py
.github/ISSUE_TEMPLATE/: 1-bug-report.yml
benchmark/: analyze_performance.py
benchmark/datasets/: gsm8k.jsonl  wmt14.jsonl
benchmark/ruler/: README.md  generate_and_convert.py  score_with_ruler.py
benchmark/specbench/: README_batch_analysis.md
comparison/: README.md  __init__.py  analysis.py  analyze_saved_data.py  config.py  detailed_logits_comparison_results.json  logits.py  logits_capture_custom_high_performance.pkl  logits_capture_custom_iter3_tree16.pkl  logits_capture_edge_case_config.pkl  logits_capture_minimal_config.pkl  run_cpmcu_config.py  run_inference.py  workflow.py
config/: default_config.json
cpmcu/: __init__.py  api_models.py  args.py  cli.py  generate.py  launch_server.py  llm.py  llm_w4a16_gptq_marlin.py  server.py  utils.py
cpmcu/common/: args.py  benchmark.py  display.py  log_utils.py  logging.py  openai_api.py  utils.py
cpmcu/speculative/: eagle.py  tree_drafter.py
doc/ch/: docker_build.md  docker_use.md
doc/en/: docker_build.md  docker_use.md
docs/: args_architecture.md
examples/: eagle2_run.py  eagle_config.json  logits_comparison_direct.py  long_prompt_gen.py  pytorch_eagle.py  sglang_eagle.py  start_server.py  test_generate.py  test_openai_api.py
src/: entry.cu  signal_handler.cu  utils.cuh
tests/: start_server.py  test_generate.py  test_model_generation.py  test_openai_api.py
(+69 files in other folders)
